# RAG-Django-app

./: .gitignore  api_simulator.py  api_source.py  auto_refresh.py  data_loader.py  embed_and_store.py  hash_utils.py  main.py  normalize.py  pyproject.toml  rag_query.py  requirements.txt  streamlit_app.py  tailwind.config.ts  test.py  vector_db.py
.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/dev/types/: routes.d.ts  validator.ts
app/: globals.css  layout.tsx  page.tsx
app/chat/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/chat/: page.tsx
app/dashboard/settings/: page.tsx
app/sources/: page.tsx
backend/: .env.example  db.sqlite3  requirements.txt
backend/accounts/: admin.py  models.py  urls.py  views.py
backend/chat/: admin.py  models.py  serializers.py  urls.py  views.py
backend/rag_backend/: settings.py  urls.py
backend/sources/: admin.py  models.py  rag_service.py  serializers.py  urls.py  views.py
components/: backend-config.tsx
components/dashboard/: header.tsx  sidebar.tsx
components/landing/: features.tsx  footer.tsx  hero.tsx
components/ui/: alert-dialog.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx
frontend/rag-frontend/: package-lock.json  tsconfig.json
lib/: api-client.ts  api.ts  auth-context.tsx
qdrant_storage/: raft_state.json
(+391 files in other folders)
